libs/pydegas/src/pydegas/parse/degas-loss/DeGASLossParser.py
# Generated from DeGASLoss.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class DeGASLossParser(Parser):
    grammarFileName = "DeGASLoss.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'loss'",
        "'dist'",
        "'traj_set'",
        "'index_list'",
        "'scalar'",
        "'int'",
        "'mean'",
        "'marg_pdf'",
        "'pdf'",
        "'var'",
        "'log'",
        "'exp'",
        "'abs'",
        "'sqrt'",
        "'sum'",
        "'mean_agg'",
        "'max'",
        "'min'",
        "'range'",
        "'ones'",
        "'='",
        "';'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'^'",
        "'.'",
        "','",
        "':'",
        "'('",
        "')'",
        "'['",
        "']'",
    ]

    symbolicNames = [
        "<INVALID>",
        "LOSS",
        "DIST",
        "TRAJ_SET",
        "INDEX_LIST",
        "SCALAR",
        "INT_TYPE",
        "MEAN",
        "MARG_PDF",
        "PDF",
        "VAR",
        "LOG",
        "EXP",
        "ABS",
        "SQRT",
        "SUM",
        "MEAN_AGG",
        "MAX",
        "MIN",
        "RANGE",
        "ONES",
        "ASSIGN",
        "SEMICOLON",
        "PLUS",
        "MINUS",
        "STAR",
        "SLASH",
        "CARET",
        "DOT",
        "COMMA",
        "COLON",
        "LPAREN",
        "RPAREN",
        "LBRACKET",
        "RBRACKET",
        "NUMBER",
        "INTEGER",
        "IDENT",
        "WS",
        "LINE_COMMENT",
        "BLOCK_COMMENT",
    ]

    RULE_program = 0
    RULE_lossDef = 1
    RULE_lossBody = 2
    RULE_assignment = 3
    RULE_returnExpr = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_typeAnn = 7
    RULE_expr = 8
    RULE_addExpr = 9
    RULE_mulExpr = 10
    RULE_powExpr = 11
    RULE_unaryExpr = 12
    RULE_mathFunc = 13
    RULE_callExpr = 14
    RULE_distCall = 15
    RULE_trajCall = 16
    RULE_aggCall = 17
    RULE_constructExpr = 18
    RULE_indexExpr = 19
    RULE_intList = 20
    RULE_primary = 21

    ruleNames = [
        "program",
        "lossDef",
        "lossBody",
        "assignment",
        "returnExpr",
        "paramList",
        "param",
        "typeAnn",
        "expr",
        "addExpr",
        "mulExpr",
        "powExpr",
        "unaryExpr",
        "mathFunc",
        "callExpr",
        "distCall",
        "trajCall",
        "aggCall",
        "constructExpr",
        "indexExpr",
        "intList",
        "primary",
    ]

    EOF = Token.EOF
    LOSS = 1
    DIST = 2
    TRAJ_SET = 3
    INDEX_LIST = 4
    SCALAR = 5
    INT_TYPE = 6
    MEAN = 7
    MARG_PDF = 8
    PDF = 9
    VAR = 10
    LOG = 11
    EXP = 12
    ABS = 13
    SQRT = 14
    SUM = 15
    MEAN_AGG = 16
    MAX = 17
    MIN = 18
    RANGE = 19
    ONES = 20
    ASSIGN = 21
    SEMICOLON = 22
    PLUS = 23
    MINUS = 24
    STAR = 25
    SLASH = 26
    CARET = 27
    DOT = 28
    COMMA = 29
    COLON = 30
    LPAREN = 31
    RPAREN = 32
    LBRACKET = 33
    RBRACKET = 34
    NUMBER = 35
    INTEGER = 36
    IDENT = 37
    WS = 38
    LINE_COMMENT = 39
    BLOCK_COMMENT = 40

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DeGASLossParser.EOF, 0)

        def lossDef(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DeGASLossParser.LossDefContext)
            else:
                return self.getTypedRuleContext(DeGASLossParser.LossDefContext, i)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):

        localctx = DeGASLossParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.lossDef()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == DeGASLossParser.LOSS):
                    break

            self.state = 49
            self.match(DeGASLossParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LossDefContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOSS(self):
            return self.getToken(DeGASLossParser.LOSS, 0)

        def IDENT(self):
            return self.getToken(DeGASLossParser.IDENT, 0)

        def LPAREN(self):
            return self.getToken(DeGASLossParser.LPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(DeGASLossParser.ParamListContext, 0)

        def RPAREN(self):
            return self.getToken(DeGASLossParser.RPAREN, 0)

        def ASSIGN(self):
            return self.getToken(DeGASLossParser.ASSIGN, 0)

        def lossBody(self):
            return self.getTypedRuleContext(DeGASLossParser.LossBodyContext, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_lossDef

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLossDef"):
                listener.enterLossDef(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLossDef"):
                listener.exitLossDef(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLossDef"):
                return visitor.visitLossDef(self)
            else:
                return visitor.visitChildren(self)

    def lossDef(self):

        localctx = DeGASLossParser.LossDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lossDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(DeGASLossParser.LOSS)
            self.state = 52
            self.match(DeGASLossParser.IDENT)
            self.state = 53
            self.match(DeGASLossParser.LPAREN)
            self.state = 54
            self.paramList()
            self.state = 55
            self.match(DeGASLossParser.RPAREN)
            self.state = 56
            self.match(DeGASLossParser.ASSIGN)
            self.state = 57
            self.lossBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LossBodyContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.ReturnExprContext, 0)

        def assignment(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DeGASLossParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(DeGASLossParser.AssignmentContext, i)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_lossBody

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLossBody"):
                listener.enterLossBody(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLossBody"):
                listener.exitLossBody(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLossBody"):
                return visitor.visitLossBody(self)
            else:
                return visitor.visitChildren(self)

    def lossBody(self):

        localctx = DeGASLossParser.LossBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lossBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 59
                    self.assignment()
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

            self.state = 65
            self.returnExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(DeGASLossParser.IDENT, 0)

        def ASSIGN(self):
            return self.getToken(DeGASLossParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(DeGASLossParser.ExprContext, 0)

        def SEMICOLON(self):
            return self.getToken(DeGASLossParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_assignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)

    def assignment(self):

        localctx = DeGASLossParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(DeGASLossParser.IDENT)
            self.state = 68
            self.match(DeGASLossParser.ASSIGN)
            self.state = 69
            self.expr()
            self.state = 70
            self.match(DeGASLossParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(DeGASLossParser.ExprContext, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_returnExpr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterReturnExpr"):
                listener.enterReturnExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitReturnExpr"):
                listener.exitReturnExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitReturnExpr"):
                return visitor.visitReturnExpr(self)
            else:
                return visitor.visitChildren(self)

    def returnExpr(self):

        localctx = DeGASLossParser.ReturnExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DeGASLossParser.ParamContext)
            else:
                return self.getTypedRuleContext(DeGASLossParser.ParamContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DeGASLossParser.COMMA)
            else:
                return self.getToken(DeGASLossParser.COMMA, i)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_paramList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParamList"):
                listener.enterParamList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParamList"):
                listener.exitParamList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParamList"):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)

    def paramList(self):

        localctx = DeGASLossParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0  # Token type
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DeGASLossParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.param()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == DeGASLossParser.COMMA:
                    self.state = 75
                    self.match(DeGASLossParser.COMMA)
                    self.state = 76
                    self.param()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DeGASLossParser.RPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(DeGASLossParser.IDENT, 0)

        def COLON(self):
            return self.getToken(DeGASLossParser.COLON, 0)

        def typeAnn(self):
            return self.getTypedRuleContext(DeGASLossParser.TypeAnnContext, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_param

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParam"):
                listener.enterParam(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParam"):
                listener.exitParam(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParam"):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)

    def param(self):

        localctx = DeGASLossParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(DeGASLossParser.IDENT)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == DeGASLossParser.COLON:
                self.state = 86
                self.match(DeGASLossParser.COLON)
                self.state = 87
                self.typeAnn()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeAnnContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIST(self):
            return self.getToken(DeGASLossParser.DIST, 0)

        def TRAJ_SET(self):
            return self.getToken(DeGASLossParser.TRAJ_SET, 0)

        def INDEX_LIST(self):
            return self.getToken(DeGASLossParser.INDEX_LIST, 0)

        def SCALAR(self):
            return self.getToken(DeGASLossParser.SCALAR, 0)

        def INT_TYPE(self):
            return self.getToken(DeGASLossParser.INT_TYPE, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_typeAnn

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTypeAnn"):
                listener.enterTypeAnn(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTypeAnn"):
                listener.exitTypeAnn(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTypeAnn"):
                return visitor.visitTypeAnn(self)
            else:
                return visitor.visitChildren(self)

    def typeAnn(self):

        localctx = DeGASLossParser.TypeAnnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeAnn)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << DeGASLossParser.DIST)
                        | (1 << DeGASLossParser.TRAJ_SET)
                        | (1 << DeGASLossParser.INDEX_LIST)
                        | (1 << DeGASLossParser.SCALAR)
                        | (1 << DeGASLossParser.INT_TYPE)
                    )
                )
                != 0
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.AddExprContext, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)

    def expr(self):

        localctx = DeGASLossParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.addExpr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.MulExprContext, 0)

        def addExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.AddExprContext, 0)

        def PLUS(self):
            return self.getToken(DeGASLossParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(DeGASLossParser.MINUS, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_addExpr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAddExpr"):
                listener.enterAddExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAddExpr"):
                listener.exitAddExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddExpr"):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)

    def addExpr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DeGASLossParser.AddExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_addExpr, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.mulExpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DeGASLossParser.AddExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_addExpr)
                    self.state = 97
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException

                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 98
                    _la = self._input.LA(1)
                    if not (_la == DeGASLossParser.PLUS or _la == DeGASLossParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 99
                    self.mulExpr(0)
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class MulExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def powExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.PowExprContext, 0)

        def mulExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.MulExprContext, 0)

        def STAR(self):
            return self.getToken(DeGASLossParser.STAR, 0)

        def SLASH(self):
            return self.getToken(DeGASLossParser.SLASH, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_mulExpr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMulExpr"):
                listener.enterMulExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMulExpr"):
                listener.exitMulExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMulExpr"):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)

    def mulExpr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DeGASLossParser.MulExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_mulExpr, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.powExpr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DeGASLossParser.MulExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mulExpr)
                    self.state = 108
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException

                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 109
                    _la = self._input.LA(1)
                    if not (_la == DeGASLossParser.STAR or _la == DeGASLossParser.SLASH):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 110
                    self.powExpr()
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PowExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.UnaryExprContext, 0)

        def CARET(self):
            return self.getToken(DeGASLossParser.CARET, 0)

        def powExpr(self):
            return self.getTypedRuleContext(DeGASLossParser.PowExprContext, 0)

        def getRuleIndex(self):
            return DeGASLossParser.RULE_powExpr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPowExpr"):
                listener.enterPowExpr(self)
